# imperial.py

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
imperial/: __init__.py  exceptions.py
imperial/checks/: ensure_api_token.py
imperial/client/: __init__.py  check_api_token.py  delete_document.py  request.py
imperial/clients/: __init__.py  io.py
imperial/common/: __init__.py
imperial/documents/: __init__.py  io.py
imperial/lib/: exceptions.py
imperial/lib/async_/: client.py  rest.py
imperial/lib/base/: base.py  client.py  document.py  document_manager.py  manager.py  me.py  me_manager.py  rest.py  user.py  users_manager.py
imperial/lib/clients/: __init__.py  aio.py  io.py  sync.py
imperial/lib/common/: __init__.py
imperial/lib/document/: __init__.py  links.py  (+2 more)
imperial/tests/: __init__.py  mock.py  response_creator.py  test_create_document.py  test_document.py  test_exceptions.py  test_get_document.py  test_json_parser.py
imperial/utils/: __init__.py
imperial_py/: __init__.py  checks.py  client.py  document.py  exceptions.py  helpers.py  hostname.py  imperialbin.py  utils.py
imperial_py/checks/: __init__.py  ensure_api_token.py  ensure_content.py  ensure_document_id.py  is_invalid_string.py  is_valid_param.py
imperial_py/client/: __init__.py  body.py  check_api_token.py  create_document.py  delete_document.py  edit_document.py  get_document.py  purge_documents.py  request.py
imperial_py/utils/: __init__.py  checks.py  client.py  hostname.py  json_parser.py  param_checks.py  parser.py
imperialbin/: __init__.py  imperialbin.py
(+33 files in other folders)
