[tool.poetry]
name = "imperial"
version = "3.0.0a1"
description = ""
authors = ["Hexiro <realhexiro@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
httpx = "^0.20.0"
dataclasses = { python = "3.6", version = "^0.8" }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
