[tool.poetry]
name = "imperial"
version = "3.0.0a1"
description = ""
authors = ["Hexiro <realhexiro@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.6"
httpx = "^0.20.0"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
pytest = "^6.2.5"
pytest-mypy = "^0.8.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disable_error_code = "return-value"
show_error_codes = true

[tool.pytest.ini_options]
addopts = "--mypy -vv"
